<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".iu.estadios.EstadisticasEstadioActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_marginTop="90dp"
                    tools:ignore="UseCompoundDrawables,UselessParent">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/panel"
                        android:src="@drawable/panel_solar"
                        tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abril_fatface"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textSize="48sp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables,UselessParent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abril_fatface"
                        android:text="@string/estadistica_estadio"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">
                    <TableLayout
                        android:id="@+id/tableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="6">
                        <TableRow>
                            <TextView
                                android:text="@string/name_"
                                android:padding="5dp"
                                android:textStyle="bold" />
                            <TextView
                                android:text="@string/paneles"
                                android:padding="5dp"
                                android:textAlignment="textEnd"
                                android:textStyle="bold" />
                            <TextView

                                android:text="@string/kWh"
                                android:padding="5dp"
                                android:textAlignment="textEnd"
                                android:textStyle="bold" />
                            <TextView
                                android:text="@string/valor"
                                android:padding="5dp"
                                android:textAlignment="textEnd"
                                android:textStyle="bold" />
                            <TextView
                                android:text="@string/mes"
                                android:padding="5dp"
                                android:textAlignment="textEnd"
                                android:textStyle="bold" />
                            <TextView
                                android:textAlignment="textEnd"
                                android:text="@string/lat_long"
                                android:padding="5dp"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>
                            <TextView
                                android:text="@string/n_maracana"
                                android:padding="5dp" />
                            <TextView
                                android:textAlignment="textEnd"
                                android:text="300"
                                android:padding="5dp" />
                            <TextView
                                android:text="6000"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="1000000"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="Junio"
                                android:padding="5dp"
                                android:textAlignment="textEnd"/>
                            <TextView
                                android:text="4; -74"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                        </TableRow>

                        <TableRow>
                            <TextView
                                android:text="@string/n_campin"
                                android:padding="5dp" />
                            <TextView
                                android:text="300"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="6000"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="500000"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="Mayo"
                                android:padding="5dp"
                                android:textAlignment="textEnd"/>
                            <TextView
                                android:text="9; 32"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />

                        </TableRow>
                        <TableRow>
                            <TextView
                                android:text="@string/n_maracana"
                                android:padding="5dp" />
                            <TextView
                                android:text="300"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="6000"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="900000"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="Abril"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />
                            <TextView
                                android:text="8; -80"
                                android:textAlignment="textEnd"
                                android:padding="5dp" />

                        </TableRow>

                    </TableLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</LinearLayout>