<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantalla_inicio_2"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginTop="90dp"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/panel"
                android:src="@drawable/panel_solar"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="48sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:backgroundTint="@color/blue_01"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textAlignment="center"
            android:backgroundTint="@color/green"
            android:textStyle="bold"
            android:text="@string/register"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
