<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/fondo_tip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipActivity"
    tools:ignore="MissingClass">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginTop="90dp"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/panel"
                android:src="@drawable/panel_solar"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:textSize="48sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_tip_1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/button_tip"
                    android:text="@string/ahorro_energia"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:src="@drawable/rectangle_shape" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_tip_2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/button_tip"
                    android:text="@string/cero_contaminacion"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:src="@drawable/rectangle_shape" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_tip_3"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/button_tip"
                    android:text="@string/ener_sostenible"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:src="@drawable/rectangle_shape" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>